Quorum3/Library/Tests/TypeCheckerGenerated/Pass/RetAssignObjectNumObj.quorum
class Main
    action Main
        Object v = Test()
        Number var = cast(Number, v)
        if var:GetValue() = 5.0
            output "passed"
        end
    end

    action Test() returns Object
        Number var
        var:SetValue(5.0)
        return var
    end
end