Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignTextNumObj.quorum
class Main
    action Main
        text v = Test()
    end

    action Test() returns text
        Number var
        var:SetValue(5.0)
        return var
    end
end